--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ config.env
 
 # Ignore package-lock.json (optional, if you want to avoid it as well)
 package-lock.json
+
+# Ignore node_modules folder
+.cache/
